--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -33,5 +33,5 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="src/main/java"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
